nexus-rt/tests/ui/param_two_lifetimes.stderr
error: derive(Param) requires exactly one lifetime parameter, e.g., `struct MyParam<'w>`
 --> tests/ui/param_two_lifetimes.rs:7:20
  |
7 | struct TwoLifetimes<'a, 'b> {
  |                    ^^^^^^^^
